test/fixtures/fixtures/type-error/noOverloadQty.lys.ast.desugar
|-Document(0,91)
  |-(AstCons)
    |-(AstCons)
      |-(AstCons)
        |-FunctionDirective(0,24)
          |-(AstCons)
            |-Decorators(0,0)
              <Rule0>
            |-(AstCons)
              |-PrivateModifier(0,8)
                <Rule0>
              |-FunDeclaration(8,24)
                |-(AstCons)
                  |-NameIdentifier(12,13)
                    |-Identifier=x
                  |-(AstCons)
                    |-TypeParameters(13,13)
                      <Rule0>
                    |-(AstCons)
                      |-FunctionParamsList(13,15)
                        |-(List)(14,14)
                          <Rule0>
                      |-(AstCons)
                        |-ReturnType(15,21)
                          |-Reference(17,20)
                            |-QName(17,20)
                              |-NameIdentifier(17,20)
                                |-Identifier=i32
                        |-FunctionBody(21,24)
                          |-NumberLiteral=1
        |-FunctionDirective(25,55)
          |-(AstCons)
            |-Decorators(25,25)
              <Rule0>
            |-(AstCons)
              |-PrivateModifier(25,33)
                <Rule0>
              |-FunDeclaration(33,55)
                |-(AstCons)
                  |-NameIdentifier(37,38)
                    |-Identifier=x
                  |-(AstCons)
                    |-TypeParameters(38,38)
                      <Rule0>
                    |-(AstCons)
                      |-FunctionParamsList(38,46)
                        |-(List)(39,45)
                          |-Parameter(39,45)
                            |-(AstCons)
                              |-NameIdentifier(39,40)
                                |-Identifier=a
                              |-Reference(42,45)
                                |-QName(42,45)
                                  |-NameIdentifier(42,45)
                                    |-Identifier=i32
                      |-(AstCons)
                        |-ReturnType(46,52)
                          |-Reference(48,51)
                            |-QName(48,51)
                              |-NameIdentifier(48,51)
                                |-Identifier=i32
                        |-FunctionBody(52,55)
                          |-NumberLiteral=1
      |-FunctionDirective(57,90)
        |-(AstCons)
          |-Decorators(57,57)
            <Rule0>
          |-(AstCons)
            |-NoModifier(57,57)
              <Rule0>
            |-FunDeclaration(57,90)
              |-(AstCons)
                |-NameIdentifier(61,62)
                  |-Identifier=x
                |-(AstCons)
                  |-TypeParameters(62,62)
                    <Rule0>
                  |-(AstCons)
                    |-FunctionParamsList(62,70)
                      |-(List)(63,69)
                        |-Parameter(63,69)
                          |-(AstCons)
                            |-NameIdentifier(63,64)
                              |-Identifier=a
                            |-Reference(66,69)
                              |-QName(66,69)
                                |-NameIdentifier(66,69)
                                  |-Identifier=f32
                    |-(AstCons)
                      |-ReturnType(70,76)
                        |-Reference(72,75)
                          |-QName(72,75)
                            |-NameIdentifier(72,75)
                              |-Identifier=i32
                      |-FunctionBody(76,90)
                        |-AtomicExpression(78,90)
                          |-(AstCons)
                            |-Reference(78,79)
                              |-QName(78,79)
                                |-NameIdentifier(78,79)
                                  |-Identifier=x
                            |-CallArguments(79,90)
                              |-(AstCons)
                                |-NumberLiteral=1.0
                                |-(AstCons)
                                  |-NumberLiteral=1
                                  |-NumberLiteral=2
    |-EndOfFile=